# react-native-template

./: .gitignore  Cargo.toml  PLAN.md  PROJECT.md  README.md  TODO.md  akdev  cargo-generate.toml  dev.sh  react-native-setup-from-scratch-all-steps.md  rebuild-ios.sh  run-maestro-tests.sh
.github/workflows/: prepare-template.yml
maestro/: 01_app_launch.yaml  02_user_name_editing.yaml  03_room_creation.yaml  04_message_sending.yaml  MAESTRO_TEST_SPEC.md  config.yaml
maestro/common/: create_room.yaml  enter_room.yaml  navigate_to_room_list.yaml  send_message.yaml  wait_for_connection.yaml
model/: Cargo.toml
model/src/: lib.rs
react-app/: AnkurahApp.podspec  App.tsx  app.json  babel.config.js  metro.config.js  package-lock.json  package.json  ubrn.config.yaml
react-app/AnkurahAppFramework.xcframework/: Info.plist
react-app/android/: settings.gradle
react-app/android/app/: build.gradle
react-app/android/app/src/main/java/com/ankurahapp/: MainActivity.kt  MainApplication.kt
react-app/android/app/src/main/res/values/: strings.xml
react-app/cpp/: ankurah-app.cpp  ankurah-app.h
react-app/ios/: AnkurahApp.h  AnkurahApp.mm  Podfile  {{project-name | pascal_case}}.h  {{project-name | pascal_case}}.mm
react-app/ios/AnkurahApp/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard  notification.caf
react-app/ios/AnkurahApp.xcodeproj/: project.pbxproj
react-app/ios/AnkurahApp.xcodeproj/xcshareddata/xcschemes/: AnkurahApp.xcscheme
react-app/ios/AnkurahApp.xcworkspace/: contents.xcworkspacedata
react-app/ios/{{project-name | pascal_case}}/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard  NotificationSound.m
react-app/ios/{{project-name | pascal_case}}.xcodeproj/: project.pbxproj
react-app/ios/{{project-name | pascal_case}}.xcodeproj/xcshareddata/xcschemes/: {{project-name | pascal_case}}.xcscheme
react-app/ios/{{project-name | pascal_case}}.xcworkspace/: contents.xcworkspacedata
react-app/src/: ChatScrollManager.ts  NativeAnkurahApp.ts  NotificationManager.ts  ankurah.ts  index.tsx  notificationSound.ts  utils.ts
react-app/src/components/: Chat.tsx  ChatDebugHeader.tsx  EditableTextField.tsx  Header.tsx  MessageInput.tsx  MessageRow.tsx  RoomList.tsx  index.ts
react-app/src/hooks/: index.ts  useDebugMode.ts  useObserve.ts  useSharedValue.ts  useSignal.ts
react-app/src/test-panel/: TestPanel.tsx  index.ts  scrollTest.ts  scrollTestIntegration.ts
rn-bindings/: Cargo.toml
rn-bindings/src/: init.rs  lib.rs  logging.rs  types.rs
server/: Cargo.toml
server/src/: main.rs
