[package]
name = "ankurah-rn-model"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
uniffi = ["ankurah/uniffi", "dep:uniffi"]

[dependencies]
ankurah = { version = "0.7.12", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
uniffi = { version = "0.29", optional = true, features = ["tokio"] }
