[package]
name = "ankurah-rn-bindings"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]
name = "ankurah_rn_bindings"

[dependencies]
uniffi = "0.29"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

# Ankurah
ankurah = { version = "0.7.12", features = ["derive", "uniffi"] }
ankurah-storage-sled = "0.7.12"
ankurah-websocket-client = "0.7.12"

# Local model crate
ankurah-rn-model = { path = "../model", features = ["uniffi"] }

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.19"
thiserror = "2.0"
dirs = "6.0"

