[package]
name = "{{project-name}}-bindings"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]
name = "{{crate_name}}_bindings"

[features]
default = ["uniffi"]
uniffi = []

[dependencies]
uniffi = "0.29"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

ankurah = { version = "0.7.15", features = ["derive", "react-native"] }
ankurah-storage-sled = { version = "0.7.15" }
ankurah-websocket-client = { version = "0.7.15" }

# Local model crate
{{project-name}}-model = { path = "../model", features = ["uniffi"] }

ankurah-virtual-scroll = { version = "0.7.5", features = ["uniffi"] }

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.19"
thiserror = "2.0"
dirs = "6.0"
ctor = "0.4"

