[package]
name = "ankurah-rn-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ankurah = { version = "0.9.0", features = ["derive"] }
ankurah-websocket-server = { version = "0.9.0" }
ankurah-storage-sled = { version = "0.9.0", optional = true }
ankurah-storage-postgres = { version = "0.9.0", optional = true }
ankurah-rn-model = { path = "../model" }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.38", features = ["rt-multi-thread"] }
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
serde_json = "1.0"

[features]
# Storage engine for the durable (server) node. `cargo generate` sets `default`
# to your choice (Sled or Postgres); change the default here to switch engines.
# Unlike the web templates (whose dev.sh manages a Postgres container), the RN
# server is run directly, so a Postgres build reads DATABASE_URL.
default = ["sled"]
sled = ["dep:ankurah-storage-sled"]
postgres = ["dep:ankurah-storage-postgres"]
